@@ -1,6 +1,6 @@
 package grammars;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import parser.Type;
 
@@ -13,7 +13,7 @@ public class StringGrammar extends Grammar {
         Rule strLiteralRule = new Rule("\\\"[\\p{Print}&&[^\\\"]]*?\\\"", "STR_LITERAL");
         VarRule strVarRule = new VarRule(VAR_RULE, "STR_VAR");
         strVarRule.useType(Type.STRING);
-        List<Rule> strExpr = new ArrayList<>(List.of(strLiteralRule, strVarRule));
+        List<Rule> strExpr = Arrays.asList(strLiteralRule, strVarRule);
         strVarRule.addChildren("var", vg.exposeEntrypoint());
         this.levels.add(strExpr);
     }
