@@ -1,5 +1,7 @@
 package grammars;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import parser.Type;
 
@@ -12,13 +14,13 @@ public class VarGrammar extends Grammar {
     public VarGrammar(Type expectedType) {
         VarRule varRule = new VarRule(VAR_RULE, "VAR");
         varRule.useType(expectedType);
-        List<Rule> varStmt = List.of(varRule);
+        List<Rule> varStmt = Collections.singletonList(varRule);
         this.levels.add(varStmt);
     }
 
     public List<Rule> exposeEntrypoint(Type expected) {
         VarRule specificRule = new VarRule(VAR_RULE, "VAR");
         specificRule.useType(expected);
-        return List.of(specificRule);
+        return Collections.singletonList(specificRule);
     }
 }
